# web3-ai-visibility

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: daily.yml  weekly.yml
.web3seo-dev/: decisions.md  failures.md  progress.md
data/: protocol_aliases.yaml  queries.yaml
frontend/: README.md  tweets.md
frontend/public/: index.html  queries.json
frontend/public/snapshots/: 2026-05-08.json
scripts/: refresh_canonical.py  run_daily.py
tests/: test_openrouter.py  test_pipeline_e2e.py  test_smoke.py
web3seo/: canonical.py  storage.py  verification.py
web3seo/pipeline/: aggregate.py  extract.py  fetch.py
web3seo/providers/: __init__.py  base.py  openrouter.py
